--- a/package.json
+++ b/package.json
@@ -26,14 +26,10 @@
   "homepage": "https://github.com/sebknight/google-blogger#readme",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "cssmin": "^0.4.3",
     "express": "^4.16.3",
     "googleapis": "^33.0.0",
-    "grunt-cli": "^1.3.1",
     "jquery": "^3.3.1",
-    "jshint": "^2.9.6",
-    "popper.js": "^1.14.4",
-    "uglify": "^0.1.5"
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "grunt": "^1.0.3",
